--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <strong> como ajudar o atlhetico </strong>
+    <h1><strong> como ajudar o atlhetico </strong> </h1>  
    <p>   sfs</p>
-   <h1> jjhhjshj</h1>
+   <img src="lulu.jpg">
 </body>
 </html>
